# DesignDual

./: .env.example  .gitignore  README.md  backend-revision-api.md  backend-to-frontend-routes.md  backend-to-frontend-routes_PROGRESS.md  prd-agents-v1.md  prd-agents-v1_PROGRESS.md  prd-agents-v2_PROGRESS.md  prd-v1.md
backend/: pyproject.toml  test_artifact_persistence.sh  test_final_assembler_integration.py  test_full_pipeline.sh  test_grading_events.py  test_pipeline_v2_structure.py  test_plan_outline_integration.py  test_processing_transition.py  test_queued_status.py  test_rubric_radar_integration.py  test_session_state_v2.py  test_sse_event_sequence.py  test_status_compat.py  test_status_lifecycle.sh  test_submission_validation.sh
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  contract_guard_agent.py  design_agent.py  final_assembler_v2.py  orchestrator.py  orchestrator_v2.py  phase_agents.py  plan_outline_agent.py  rubric_radar_agent.py  scale_agent.py  scoping_agent.py  synthesis_agent.py  test_pipeline.py  test_pipeline_v2.py  tradeoff_agent.py
backend/app/db/: __init__.py  init_db.py  schema.sql  (+6 more)
backend/docs/: API.md  DesignDual.postman_collection.json
backend/temp/: Sample Video To Practice Transcribing.m4a  agent_test_results.json  pipeline_test_result_20260207_215653.json  pipeline_v2_test_results.json  sse_event_flow_v2.md  status_lifecycle_test_20260207_230317.txt  status_lifecycle_test_20260207_230354.txt  task_6.8_test_results.md  task_6.9_status_compat_doc.md  transcript.en.srt  validation_test_results.txt
(+36 files in other folders)
